--- a/specs/simple_dialog.yaml
+++ b/specs/simple_dialog.yaml
@@ -8,9 +8,9 @@ dialogs:
       - "Tulips"
       - "What day do you want the Tulips to be picked up?"
       - "20th December"
-      - "Pick up the Tulips at what time on 2018-12-20?"
+      - "Pick up the Tulips at what time on .*-12-20?"
       - "noon"
-      - "Okay, your Tulips will be ready for pickup by 12:00 on 2018-12-20.  Does this sound okay?"
+      - "Okay, your Tulips will be ready for pickup by 12:00 on .*-12-20.  Does this sound okay?"
       - "yes"
 
   - what: "simple flower test2"
@@ -20,7 +20,7 @@ dialogs:
       - "Roses"
       - "What day do you want the Roses to be picked up?"
       - "25th December"
-      - "Pick up the ffRoses at what time on 2018-12-25?"
+      - "Pick up the Roses at what time on .*-12-25?"
       - "noon"
-      - "Okay, your Roses will be ready for pickup by 12:00 on 2018-12-25.  Does this sound okay?"
+      - "Okay, your Roses will be ready for pickup by 12:00 on .*-12-25.  Does this sound okay?"
       - "yes"
