--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -44,14 +44,12 @@ jobs:
           name: run tests
           command: |
             mkdir /tmp/test-results
-            TEST_FILES="$(circleci tests glob "spec/**/*_spec.rb" | \
+            TEST_FILES="$(circleci tests glob "**/*_spec.rb" | \
               circleci tests split --split-by=timings)"
 
             bundle exec rspec \
-              --format progress \
-              --format RspecJunitFormatter \
+              --format html \
               --out /tmp/test-results/rspec.xml \
-              --format progress \
               $TEST_FILES
 
       # collect reports
